tests/fixtures/invalid/divmod_float_str.py
# Cannot call divmod() with Float, Str
x = divmod(1.0, "hello")
